<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_bienvenue"
        android:layout_marginTop="215dp"
        android:layout_marginStart="10dp"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_action"
        android:layout_marginStart="10dp"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/accueil_connexion_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/gestion_nouveau"
        android:textSize="21dp"/>

    <Button
        android:id="@+id/accueil_inscription_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestion_connexion"
        android:textSize="21dp"/>

</LinearLayout>