<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/inscription_nom"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/inscription_nom_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/inscription_prenom"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/inscription_prenom_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/inscription_email"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/inscription_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/incription_mdp"
        android:layout_marginLeft="10dp"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/inscription_mdp_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/bouton_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/inscription_valider"
        android:textSize="21dp"/>

</LinearLayout>