<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:text="@string/recherche_instructions"
        android:layout_marginStart="10dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/recherche_livre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recherche_hint"
        android:layout_marginTop="30dp"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/boutton_recherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/recherche_valider"
        android:textSize="23dp"/>



</LinearLayout>